# rate-limiter

./: .gitignore  README.md  docker-compose.yml
db/migrations/: 001_init.sql
decision-engine/: Dockerfile  Makefile  go.mod  go.sum
decision-engine/cmd/ebpf/: blocklist.go
decision-engine/cmd/server/: main.go
decision-engine/internal/config/: config.go
decision-engine/internal/engine/: engine.go  engine_test.go  engine_testing.go
decision-engine/internal/kafka/: producer.go
decision-engine/internal/ml/: client.go
decision-engine/internal/redis/: client.go
decision-engine/proto/: scorer.pb.go  scorer.proto  scorer_grpc.pb.go
ebpf/: Makefile  tc_blocker.c
ebpf/loader/: go.mod  load.sh  main.go
ebpf/scripts/: setup_tc.sh
ebpf/src/: rate_limiter.bpf.c
kafka/: create-topics.sh
ml-sidecar/: Dockerfile  Makefile  __init__.py  pyproject.toml  requirements.txt  scorer.py  server.py
ml-sidecar/models/: isolation_forest.py  lstm.onnx.readme  lstm_model.py
ml-sidecar/proto/: __init__.py
ml-sidecar/tests/: test_models.py
ml-sidecar/training/: retrain.py
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: default.conf
nginx/lua/: access.lua  counter.lua  fingerprint.lua  metrics.lua
observability/grafana/dashboards/: overview.json
observability/prometheus/: prometheus.yml
redis/: REDIS.md  docker-compose.cluster.yml  redis.conf  redis.env
redis/lua-scripts/: get_set_model.lua  token_bucket.lua
redis/scripts/: init-cluster.sh
scripts/: deploy.sh  setup.sh
tests/load/: rate_limit_test.js
tests/unit/: README.md
(+2 files in other folders)
