[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-sidecar"
version = "0.1.0"
description = "ML-driven anomaly scoring sidecar for adaptive rate limiting"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "scikit-learn>=1.4.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "kafka-python>=2.0.2",
    "pydantic>=2.5.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
